# scheduler

./: Cargo.toml
example/: example_shifts.toml  example_users.toml
src/: constraint.rs  main.rs  user.rs  utils.rs
