[package]
name = "scheduler"
version = "0.1.0"
authors = ["Vador <msidorcz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
chrono = "0.4"
serde = { version = "1.0.104", features = ["derive"] }